<resources>
    <string name="app_name">Spyder</string>
    <string name="page_text">Main Layout</string>
    <string name="close">Close</string>
    <string name="open">Open</string>
    <string name="title_activity_base_map">Map</string>
    <string name="google_maps_key">AIzaSyD5ml66ClOqcZ5H1LHyLiy1Zo15aIIG52Q</string>
    <string name="desc">Content descrioption</string>
    <string name="tip">Tool tip</string>
    <string name="services">Services</string>
    <string name="about">About</string>
    <string name="help">Help</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="title_activity_login">Login</string>
    <string name="exit">Exit</string>

    <!--Services-->
    <string name="police">Police</string>
    <string name="fire_service">Fire Service</string>
    <string name="ambulance">Ambulance</string>
    <string name="tire_service">Tire Service</string>
    <string name="auto_mechanics">Auto-Mechanic </string>
    <string name="emergency_services">Emergency services</string>
    <string name="towing_service">Towing Service</string>

    <!--Login Layout Strings-->
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Log in</string>
    <string name="reset_password">Reset Password</string>
    <string name="not_reg">New here? Sign up</string>
    <string name="showP">Show password</string>

    <!--Sign up-->
    <string name="fName">Firstname</string>
    <string name="oName">Othername</string>
    <string name="conPassword">Confirm Password</string>
    <string name="phone">Phone number</string>
    <string name="email">Email </string>
    <string name="submit">Submit</string>

    <!--Map-->
    <string name="map_view">Map View</string>

    <!--Service provider info -->
    <string name="shop_name">Shop name</string>
    <string name="technicain_name">Technician</string>
    <string name="town">Town </string>
    <string name="expertise_title">Expertise</string>
    <string name="contact_tilte">Contact</string>
    <string name="phone1">Phone1 </string>
    <string name="phone2">Phone2 </string>
    <string name="distance">Distance </string>
    <string name="gps_loc">GPS Location </string>
    <string name="rating">Rating</string>
    <string name="copy_info">Copy info</string>

    <!--About activity-->
    <string name="about_the_project">About the Project</string>
    <string name="project_summary"> oshfdiaadfjhajklhfljkhsdjjfhaiowhfjsdjahfjkhsdjkcnjakhsfsdhflj
        akhifhjsalkhdfoiahdjfh    sdfioihsivhiohoihvsd sdovjsh noih  hhiodjvdh idvjhlsjdhvja h oash
        oh oislfajsdnhwj joalhvjs bbdjba s js vuhsj  nioabvicvjjc shd jjsoaljv  sabvsiuh jsi
        jbjihlshdvnkds usbkvjhdjs
    </string>


    <string name="members">Team Members</string>
    <string name="M1">Boadu Philip Asare</string>
    <string name="M2">Maxwell Sarpong</string>
    <string name="M3">Gideon Quarty</string>

    <string name="M1_role">Role: Programming, Database Design</string>
    <string name="M1_tel">tel: 026 611 2077</string>
    <string name="M1_email">email: asarephilip8@gmail.com </string>

    <string name="M2_role">Role: Documantation, Application Design, Project leader</string>
    <string name="M2_tel">tel: 020 850 2588</string>
    <string name="M2_email">email: maxwellsarpong07@gmail.com</string>

    <string name="M3_role">Role: Documantation, Application Design</string>
    <string name="M3_tel">tel : 020 945 6373</string>
    <string name="M3_email">email: </string>


</resources>
