<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center_vertical"
    android:padding="5dp"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:textAlignment="center"
        android:id="@+id/txtTitle"/>

    <TextView
        android:id="@+id/txtTown"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="2dp"
        android:drawableStart="@mipmap/location"
        android:padding="3dp"
        android:text="@string/town" />

    <TextView
        android:id="@+id/txtContactTitle"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="2dp"
        android:drawableStart="@mipmap/contact"
        android:padding="3dp"
        android:text="@string/contact_tilte" />


    <TextView
        android:id="@+id/txtPhone1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="2dp"
        android:drawableStart="@mipmap/call_big"
        android:padding="3dp"
        android:text="@string/phone1" />

    <TextView
        android:id="@+id/txtPhone2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="2dp"
        android:drawableStart="@mipmap/call_big"
        android:padding="3dp"
        android:text="@string/phone2" />

    <TextView
        android:id="@+id/txtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="7dp"
        android:drawableStart="@mipmap/send_email"
        android:padding="3dp"
        android:text="@string/email" />

    <TextView
        android:id="@+id/txtDistance"
        android:padding="3dp"
        android:layout_marginBottom="2dp"
        android:layout_marginTop="2dp"
        android:text="@string/distance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/txtGpsLocation"
        android:padding="3dp"
        android:layout_marginBottom="2dp"
        android:layout_marginTop="2dp"
        android:text="@string/gps_loc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <ImageView
        android:id="@+id/txtRating"
        android:padding="2dp"
        android:layout_marginBottom="2dp"
        android:layout_marginTop="2dp"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:contentDescription="@string/rating" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:layout_width="150dp"
            android:id="@+id/btnCopy"
            android:layout_height="50dp"
            android:text="@string/copy_info"
            android:textSize="15sp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"/>

        <Button
            android:layout_width="150dp"
            android:id="@+id/btnClose"
            android:layout_height="50dp"
            android:text="@string/close"
            android:textSize="15sp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"/>
    </LinearLayout>

</LinearLayout>

