<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/toolbar"
        android:background="@color/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
    </android.support.v7.widget.Toolbar>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center_vertical"
        android:padding="5dp"
        >
        <TextView
            android:id="@+id/txtTechnicianName"
            android:padding="3dp"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="2dp"
            android:text="@string/technicain_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <TextView
            android:id="@+id/txtTown"
            android:padding="3dp"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="2dp"
            android:text="@string/town"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/txtExpertiseTitle"
            android:padding="3dp"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="2dp"
            android:text="@string/expertise_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/txtExpertiseList"
            android:padding="3dp"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="2dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/txtContactTitle"
            android:padding="3dp"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="2dp"
            android:text="@string/contact_tilte"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


        <TextView
            android:id="@+id/txtPhone1"
            android:text="@string/phone1"
            android:padding="3dp"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="2dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/txtPhone2"
            android:padding="3dp"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="2dp"
            android:text="@string/phone2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/txtEmail"
            android:padding="3dp"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="2dp"
            android:text="@string/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/txtDistance"
            android:padding="3dp"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="2dp"
            android:text="@string/distance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/txtGpsLocation"
            android:padding="3dp"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="2dp"
            android:text="@string/gps_loc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


        <ImageView
            android:id="@+id/txtRating"
            android:padding="2dp"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="2dp"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:contentDescription="@string/rating" />


        <Button
            android:layout_width="150dp"
            android:id="@+id/btnClose"
            android:layout_height="50dp"
            android:text="@string/close"
            android:textSize="25sp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"/>


    </LinearLayout>



</LinearLayout>